# sst

examples/aws-rust-axum/: Cargo.toml
examples/aws-rust-axum/src/: main.rs
examples/aws-rust-lambda/: Cargo.toml  README.md  sst.config.ts
examples/aws-rust-lambda/src/: http_handler.rs
pkg/runtime/rust/: rust.go
platform/src/components/aws/: function.ts
sdk/rust/src/: lib.rs
www/src/content/docs/docs/: examples.mdx
www/src/content/docs/docs/reference/: sdk.mdx
